bugfix: overflow set correct in summary and signup.css

--- a/styles/signup.css
+++ b/styles/signup.css
@@ -27,7 +27,6 @@ body {
   min-height: 100%;
   width: 100%;
   font-family: "inter", sans-serif;
-  overflow: visible;
   direction: ltr;
   background-color: #F6F7F8;
 }
@@ -86,7 +85,6 @@ body {
     width: 100dvw;
     max-width: 100dvw;
     font-family: "inter", sans-serif;
-    overflow-x: hidden;
     direction: ltr;
     background-color: #F6F7F8;
     display: flex;
