--- a/styles/summary.css
+++ b/styles/summary.css
@@ -26,7 +26,6 @@ body {
   min-height: 100dvh;
   width: 100%;
   font-family: "inter", sans-serif;
-  overflow: visible;
   direction: ltr;
   background-color: #F6F7F8;
 }
@@ -76,7 +75,6 @@ body {
     min-height: 100dvh;
     width: 100%;
     font-family: "inter", sans-serif;
-    overflow: visible;
     direction: ltr;
     background-color: #F6F7F8;
 }
@@ -332,7 +330,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow-y: auto;
     opacity: 1;
     z-index: 1;
     background: #f6f7f8;
